too much spacing: fix

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -79,7 +79,7 @@
   padding: 0;
   list-style: none;
   position: relative;
-  top: 25px;
+  top: 8px;
   text-align: center;
   border-top: 2px solid #c7c7c7;
   padding-top: .4rem;
